# mem-cmp-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: ext.rs  lib.rs  mem_eq.rs  mem_ord.rs  mem_ordered.rs
