[package]
name = "mem_cmp"
version = "0.1.4"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/nvzqz/mem-cmp-rs"
repository = "https://github.com/nvzqz/mem-cmp-rs"
categories = ["no-std"]
description = "Memory comparison between types."

[badges]
travis-ci = { repository = "nvzqz/mem-cmp-rs" }

[features]
avx = ["simd"]
nightly = ["specialization"]
specialization = []

[dependencies]
simd = { version = "0.2.0", optional = true }
